bug fixing checkbox visibility in older firefox browser
Former-commit-id: df6916badbc06f1e2a8c2fcc992294b3fd857b9f

--- a/app/assets/stylesheets/responsive/modules/_form-default.scss
+++ b/app/assets/stylesheets/responsive/modules/_form-default.scss
@@ -65,39 +65,39 @@ form.default {
     @include screen-l {
       width:auto;
     }
-    -moz-appearance:none;
-    -webkit-appearance:none;
-    -o-appearance:none;
+    //-moz-appearance:none;
+    //-webkit-appearance:none;
+    //-o-appearance:none;
   }
   input[type='checkbox']:checked,
   input[type='checkbox']:not(:checked) {
     background: transparent;
     position: relative;
-    visibility: hidden;
+    //visibility: hidden;
     margin: 0 0 1em 0;
     padding:0;
   }
-  input[type='checkbox']:checked::after,
-  input[type='checkbox']:not(:checked)::after {
-    content:' ';
-    display:inline-block;
-    width: 17px;
-    height:17px;
-    position: relative;
-    top:4px;
-    border: 1px solid $gray-dark;
-    background: #fff;
-    box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.1);
-    visibility: visible;
-  }
-  input[type='checkbox']:hover::after {
-    background:#ddd;
-    box-shadow: inset 0 0 0 2px white;
-  }
-  input[type='checkbox']:checked::after {
-    background:$gray-darker;
-    box-shadow: inset 0 0 0 2px white;
-  }
+  //input[type='checkbox']:checked::after,
+  //input[type='checkbox']:not(:checked)::after {
+  //  //content: " ";
+  //  //display:inline-block;
+  //  //width: 17px;
+  //  //height:17px;
+  //  //position: relative;
+  //  //top:4px;
+  //  //border: 1px solid $gray-dark;
+  //  //background: #fff;
+  //  //box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.1);
+  //  //visibility: visible;
+  //}
+  //input[type='checkbox']:hover::after {
+  //  //background:#ddd;
+  //  //box-shadow: inset 0 0 0 2px white;
+  //}
+  //input[type='checkbox']:checked::after {
+  //  //background:$gray-darker;
+  //  //box-shadow: inset 0 0 0 2px white;
+  //}
 
   .has-error {
     label {
